samples/_failures_safe/1761712816_6a50f1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a82af2e2.c: In function ‘main’:
./samples/SAFE/__tmp_a82af2e2.c:156:5: error: expected expression at end of input
  156 |     if (scanf("%d", &start) !=
      |     ^~
./samples/SAFE/__tmp_a82af2e2.c:156:5: error: expected declaration or statement at end of input
